--- a/novacal-app/novacal-frontend/package.json
+++ b/novacal-app/novacal-frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.12",
     "lodash": "^4.17.21",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
