--- a/novacal-app/backend/requirements.txt
+++ b/novacal-app/backend/requirements.txt
@@ -14,6 +14,7 @@ filelock==3.17.0
 Flask==2.3.3
 Flask-Bcrypt==1.0.1
 Flask-Cors==4.0.0
+Flask-JWT-Extended==4.7.1
 Flask-SocketIO==5.5.1
 Flask-SQLAlchemy==3.1.1
 greenlet==3.1.1
