bolt.new suggestions

--- a/novacal-app/vercel.json
+++ b/novacal-app/vercel.json
@@ -1,8 +1,10 @@
 {
+  "buildCommand": "cd novacal-frontend && npm install && npm run build",
+  "outputDirectory": "novacal-frontend/dist",
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "/"
+      "destination": "/index.html"
     }
   ]
 }
